WEB-8987: Fix navbar spacing in layout, use title case for headers and fix responsiveness. Also removed premature js logic from webcat/research coffee file but leaving the coffee file for when we need it.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -2403,8 +2403,7 @@ a.static-nav-item {
 .hidden-auto-resolve{
   z-index: 0;
 }
-.reputation-research-search-wrapper #confirmation-modal .modal-body, .webcat-research-search-wrapper
-#confirmation-modal .modal-body {
+.reputation-research-search-wrapper #confirmation-modal .modal-body {
   color:$type-darkest!important
 }
 .webrep_auto_resolve, #auto-resolve-dialog{
@@ -4593,6 +4592,10 @@ td.wbrs-highlight, td.sbrs-highlight {
 .nav-page-button-wrapper {
   text-align: left !important;
   padding-left: 25px !important;
+
+  @media (max-width: 1300px) {
+    padding-left: 5px !important;
+  }
 }
 
 .nav-toolbar-icon-large {
@@ -5819,12 +5822,8 @@ input.table-entry-input:focus {
 }
 
 .domain-table-wrapper {
-  margin: auto;
-  width: 95%;
-
-  table {
-    max-width: 550px;
-  }
+  margin-left: 45px;
+  width: auto;
 
   thead {
     color: #999;
@@ -5944,9 +5943,15 @@ table > tbody > tr > td.research-table-row-wrapper {
 .research-lookup-container {
   margin-left: 20px
 }
-.reputation-research-search-wrapper h1, .webcat-research-search-wrapper h1 {
+.reputation-research-search-wrapper h1 {
   margin: 0 100px 0 0;
+
 }
+
+.webcat-research-search-wrapper h1 {
+  margin: 0 40px 0 0;
+}
+
 .research-header-wrapper{
   margin: -15px;
   height: 70px;
@@ -5986,6 +5991,65 @@ table > tbody > tr > td.research-table-row-wrapper {
     }
   }
 }
+
+.webcat-research-search-wrapper {
+  li > a {
+    max-width: 250px;
+  }
+
+  @media (max-width: 1300px) {
+    h1 {
+      font-size: 17pt;
+      margin: 0 35px 0 0;
+    }
+
+    .top-info-icon {
+      margin: 0 0 -3px 10px;
+    }
+
+    .nav-tabs > li > a{
+      max-width: 200px;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .nav-tabs > li > a{
+      max-width: 175px;
+    }
+  }
+
+  @media (max-width: 1100px) {
+    h1 {
+      font-size: 15pt;
+      margin: 0 25px 0 0;
+    }
+  }
+
+  @media (max-width: 1000px) {
+    .nav-tabs > li > a{
+      max-width: 100px;
+    }
+  }
+
+  @media (max-width: 900px) {
+    .nav-tabs > li > a {
+      font-size: 8pt;
+    }
+  }
+
+  @media (max-width: 800px) {
+    h1 {
+      font-size: 12pt;
+      margin: 0 10px 0 0;
+    }
+
+    .top-info-icon {
+      margin: 0 0 -3px 5px;
+      padding-right: 20px;
+    }
+  }
+}
+
 //caret for active tab  in reputation toolbar
 .research-header-wrapper li::after {
   content: '';
@@ -12926,6 +12990,12 @@ table > tbody > tr > td.no-padding {
     .wbnp-area {
       padding: 15px;
     }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #nav-banner a {
+    font-size: 9pt;
   }
 }
 
